# dpgmm

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: build-docs.yml  pypi-publish.yml  run-tests.yml  test-pypi-publish.yml
benchmarks/profiling/: profiler_analysis.py  time_profiler.py
examples/examples/: clustering.py  save_and_load.py
examples/examples/metrics/: complexity.py  entanglement.py
src/dpgmm/cholesky_update/: __init__.py  cholesky_update_adapter.py  cholesky_update_base.py
src/dpgmm/core/: model.py
src/dpgmm/datasets/: __init__.py  base_data_generator.py  data_generator_types.py  gaussian_data_generator.py  synthetic_data_generator.py
src/dpgmm/metrics/: __init__.py
src/dpgmm/samplers/: __init__.py  base.py
src/dpgmm/utils/: device.py  file_system.py
src/dpgmm/visualisation/: __init__.py  cluster_params_visualizer.py  (+1 more)
tests/: test_cholesky_update_torch.py  test_cholesky_update_torch_vs_triton.py  test_cholesky_update_triton.py  test_multivariate_student_t.py  test_prob_utils.py
tests/diag_cov/: test_diag_cov_cgs.py  test_diag_cov_log_likelihood.py  test_diag_cov_params_keeper.py  test_diag_cov_student_t_calculator.py  test_diag_cov_trace_reader.py
tests/full_cov/: test_full_cov_trace_reader.py  test_full_covariance_cgs.py  test_full_covariance_log_likelihood.py  test_full_covariance_parameters_keeper.py  test_full_covariance_student_t_calculator_torch.py  test_full_covariance_student_t_calculator_torch_vs_triton.py  test_full_covariance_student_t_calculator_triton.py
(+36 files in other folders)
