[project]
name = "dpgmm"
version = "0.1.0"
description = "dpgmm is a library implementing high-performance MCMC sampler for Dirichlet Process Gaussian Mixture Model (DPGMM). Built with PyTorch and accelerated with Triton kernels, it is designed to handle high-dimensional data efficiently."
readme = "README.md"
authors = [
    { name = "mateuszlampert", email = "mateuszlampert@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pydantic>=2.12.5",
    "pytest>=9.0.1",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.11",
    "pre-commit>=4.5.1",
    "bandit>=1.9.3",
    "safety>=3.7.0",
    "xenon>=0.9.3",
    "go-task-bin>=3.48.0",
    "pdoc>=16.0.0",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[tool.mypy]
ignore_missing_imports = true
pretty = true
show_error_codes = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]